[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/backgrounds/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/Return_Arrow_Original.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Return_Arrow_Hoover.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Return_Arrow_Pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://menus/main_menus/ChangePasswordMenu.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0.176471, 1, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 17
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 5 )

[node name="ChangePasswordMenu" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="MenuTexture" type="TextureRect" parent="BackgroundColor"]
modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ChangePasswordMainPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 11 )

[node name="ChangePasswordMainContainer" type="VBoxContainer" parent="ChangePasswordMainPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 503.0
margin_bottom = 409.0
custom_constants/separation = 5

[node name="Separation4" type="Control" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_right = 500.0

[node name="ActualPasswordLabel" type="Label" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_top = 5.0
margin_right = 500.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "CURRENT_PASSWORD"
align = 1
valign = 1

[node name="ActualPasswordLineEdit" type="LineEdit" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_top = 35.0
margin_right = 500.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 25
secret = true
clear_button_enabled = true

[node name="ActualPasswordWarningMessage" type="Label" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
visible = false
margin_top = 80.0
margin_right = 500.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 13 )
text = "WARNING_CURRENT_PASSWORD"
align = 1

[node name="Separation" type="Control" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 105.0
rect_min_size = Vector2( 500, 25 )

[node name="ChangePasswordSecondPanel" type="PanelContainer" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_top = 110.0
margin_right = 500.0
margin_bottom = 321.0
custom_styles/panel = SubResource( 12 )

[node name="ChangePasswordSecondPanel" type="VBoxContainer" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 497.0
margin_bottom = 208.0
custom_constants/separation = 10

[node name="Separation5" type="Control" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
margin_right = 494.0

[node name="NewPasswordLabel" type="Label" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
margin_top = 10.0
margin_right = 494.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "NEW_PASSWORD"
align = 1

[node name="NewPasswordLineEdit" type="LineEdit" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
margin_top = 45.0
margin_right = 494.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 25
secret = true
clear_button_enabled = true

[node name="NewPasswordWarningMessage" type="Label" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
visible = false
margin_top = 95.0
margin_right = 494.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 13 )
text = "WARNING_NEW_PASSWORD"
align = 1

[node name="Separation2" type="Control" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
margin_top = 95.0
margin_right = 494.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 25 )

[node name="RepeatNewPasswordLabel" type="Label" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
margin_top = 130.0
margin_right = 494.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "REPEAT_NEW_PASSWORD"
align = 1

[node name="RepeatNewPasswordLineEdit" type="LineEdit" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
margin_top = 165.0
margin_right = 494.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 25
secret = true
clear_button_enabled = true

[node name="RepeatNewPasswordWarningMessage" type="Label" parent="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordSecondPanel/ChangePasswordSecondPanel"]
visible = false
margin_top = 247.0
margin_right = 494.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 13 )
text = "WARNING_REPEAT_NEW_PASSWORD"
align = 1

[node name="Separation3" type="Control" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_top = 326.0
margin_right = 500.0
margin_bottom = 351.0
rect_min_size = Vector2( 0, 25 )

[node name="ChangePasswordButton" type="Button" parent="ChangePasswordMainPanel/ChangePasswordMainContainer"]
margin_top = 356.0
margin_right = 500.0
margin_bottom = 406.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "CHANGE_PASSWORD"

[node name="ReturnProfileMenu" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -40.0
margin_right = 150.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true

[connection signal="pressed" from="ChangePasswordMainPanel/ChangePasswordMainContainer/ChangePasswordButton" to="." method="_on_ChangePasswordButton_pressed"]
[connection signal="pressed" from="ReturnProfileMenu" to="." method="_on_ReturnProfileMenu_pressed"]
